--- a/package.json
+++ b/package.json
@@ -41,14 +41,15 @@
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
-    "react-micro-frontend-framework": "^0.3.0",
+    "react-micro-frontend-framework": "^0.3.3",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-observable": "^1.2.0",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
-    "rxjs": "^6.5.5"
+    "rxjs": "^6.5.5",
+    "sanitize.css": "^11.0.1"
   },
   "devDependencies": {
     "@types/jest": "^26.0.0",
@@ -60,15 +61,16 @@
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
-    "react-micro-frontend-app-example": "^0.2.1",
-    "react-micro-frontend-framework": "^0.3.0",
-    "react-micro-frontend-scripts": "^1.3.0",
+    "react-micro-frontend-app-example": "^0.3.0",
+    "react-micro-frontend-framework": "^0.3.3",
+    "react-micro-frontend-scripts": "^1.5.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-observable": "^1.2.0",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
-    "rxjs": "^6.5.5"
+    "rxjs": "^6.5.5",
+    "sanitize.css": "^11.0.1"
   }
 }
