--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "engines": {
     "node": ">=8.10"
   },
-  "routes": [
-    "/app-example/sub"
-  ],
+  "rmfManifest": {
+    "dependencies": [],
+    "routes": ["/app-example/sub"],
+    "render": "app-example-sub"
+  },
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
@@ -41,7 +43,7 @@
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
-    "react-micro-frontend-framework": "^0.3.3",
+    "react-micro-frontend-framework": "^0.5.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
@@ -61,9 +63,9 @@
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
-    "react-micro-frontend-app-example": "^0.3.0",
-    "react-micro-frontend-framework": "^0.3.3",
-    "react-micro-frontend-scripts": "^1.6.1",
+    "react-micro-frontend-app-example": "^0.3.1",
+    "react-micro-frontend-framework": "^0.5.0",
+    "react-micro-frontend-scripts": "^2.0.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
