--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "renders": [
       {"renderId": "app-example-sub", "routePath": "/app-example/sub", "componentKey": "default"},
       {"renderId": "root", "routePath": "/sub-at-root", "componentKey": "default"}
-    ]
+    ],
+    "extra": {}
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -45,7 +46,7 @@
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
-    "react-micro-frontend-framework": "^2.1.0",
+    "react-micro-frontend-framework": "^2.3.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
@@ -66,8 +67,8 @@
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
     "react-micro-frontend-app-example": "^1.1.0",
-    "react-micro-frontend-framework": "^2.1.0",
-    "react-micro-frontend-scripts": "^2.2.0",
+    "react-micro-frontend-framework": "^2.3.0",
+    "react-micro-frontend-scripts": "^2.4.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
