--- a/package.json
+++ b/package.json
@@ -14,8 +14,16 @@
   "rmfManifest": {
     "dependencies": [],
     "renders": [
-      {"renderId": "app-example-sub", "routePath": "/app-example/sub", "componentKey": "default"},
-      {"renderId": "root", "routePath": "/sub-at-root", "componentKey": "default"}
+      {
+        "renderId": "app-example-sub",
+        "routePath": "/app-example/sub",
+        "componentKey": "default"
+      },
+      {
+        "renderId": "root",
+        "routePath": "/sub-at-root",
+        "componentKey": "default"
+      }
     ],
     "extra": {}
   },
@@ -66,9 +74,9 @@
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
-    "react-micro-frontend-app-example": "^1.1.0",
+    "react-micro-frontend-app-example": "^1.1.1",
     "react-micro-frontend-framework": "^2.3.0",
-    "react-micro-frontend-scripts": "^2.5.0",
+    "react-micro-frontend-scripts": "^2.6.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
